--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,26 +3,47 @@ name = "wsx"
 description = "Cilki's WorkSpace eXplorer"
 version = "0.1.0"
 edition = "2021"
+authors = ["cilki"]
 repository = "https://github.com/cilki/wsx/"
+readme = "README.md"
+keywords = ["git", "workspace", "cli", "repository", "manager"]
+categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
-anyhow = "1.0.82"
-cmd_lib = "1.3.0"
-enum_dispatch = "0.3.13"
+anyhow = "1"
+cmd_lib = "1"
+crossterm = { version = "0.28", optional = true }
+enum_dispatch = "0.3"
 git-repository = { version = "0", optional = true }
-home = "0.5.9"
-log = "0.4.17"
-pico-args = "0.5.0"
+home = "0.5"
+log = "0.4"
+pico-args = "0.5"
+ratatui = { version = "0.29", optional = true }
 regex = "1"
 serde = { version = "1", features = ["derive"] }
-sha2 = "0.10.6"
+serde_json = { version = "1", optional = true }
+sha2 = "0.10"
 toml = "0"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 walkdir = "2"
 
+[dev-dependencies]
+tempfile = "3"
+
 [build-dependencies]
-built = { version = "0.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }
+built = { version = "0.7", features = [
+  "cargo-lock",
+  "dependency-tree",
+  "git2",
+  "chrono",
+  "semver",
+] }
 
 [features]
+default = ["github", "gitlab", "tui"]
+github = ["dep:serde_json"]
+gitlab = []
+tui = ["dep:crossterm", "dep:ratatui"]
+# Note: git_oxide feature currently has compilation issues with git-repository dependency
 git_oxide = ["dep:git-repository"]
