--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = "1"
 cmd_lib = "1"
 crossterm = { version = "0.28", optional = true }
 enum_dispatch = "0.3"
+fuzzy-matcher = { version = "0.3", optional = true }
 gix = "0.68"
 home = "0.5"
 log = "0.4"
@@ -23,7 +24,6 @@ ratatui = { version = "0.29", optional = true }
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", optional = true }
-sha2 = "0.10"
 toml = "0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -45,4 +45,4 @@ built = { version = "0.7", features = [
 default = ["github", "gitlab", "tui"]
 github = ["dep:serde_json"]
 gitlab = []
-tui = ["dep:crossterm", "dep:ratatui"]
+tui = ["dep:crossterm", "dep:ratatui", "dep:fuzzy-matcher"]
