--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
 anyhow = "1"
+chrono = "0.4"
 cmd_lib = "1"
 crossterm = { version = "0.28", optional = true }
 enum_dispatch = "0.3"
