--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ gix = "0.75"
 home = "0.5"
 pico-args = "0.5"
 ratatui = { version = "0.29", optional = true }
-serde_json = { version = "1", optional = true }
+serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -38,7 +38,5 @@ built = { version = "0.8", features = [
 ] }
 
 [features]
-default = ["github", "gitlab", "tui"]
-github = ["dep:serde_json"]
-gitlab = []
+default = ["tui"]
 tui = ["dep:crossterm", "dep:ratatui", "dep:fuzzy-matcher"]
