--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "workset"
 description = "Manage git repos with worksets"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2024"
 authors = ["cilki"]
 repository = "https://github.com/fossable/workset/"
@@ -17,6 +17,7 @@ crossterm = { version = "0.29", optional = true }
 fuzzy-matcher = { version = "0.3", optional = true }
 gix = "0.75"
 home = "0.5"
+notify = { version = "6.1", optional = true }
 pico-args = "0.5"
 ratatui = { version = "0.29", optional = true }
 serde_json = "1"
@@ -39,4 +40,4 @@ built = { version = "0.8", features = [
 
 [features]
 default = ["tui"]
-tui = ["dep:crossterm", "dep:ratatui", "dep:fuzzy-matcher"]
+tui = ["dep:crossterm", "dep:ratatui", "dep:fuzzy-matcher", "dep:notify"]
