--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ anyhow = "1.0.100"
 cmd_lib = "1.9.6"
 crossterm = { version = "0.29", optional = true }
 fuzzy-matcher = { version = "0.3", optional = true }
-gix = "0.75"
+gix = { version = "0.75", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
 home = "0.5"
 notify = { version = "8.2.0", optional = true }
 pico-args = "0.5"
