--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "workset"
 description = "Manage git repos with worksets"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2024"
 authors = ["cilki"]
 repository = "https://github.com/fossable/workset/"
@@ -15,9 +15,12 @@ anyhow = "1.0.100"
 cmd_lib = "1.9.6"
 crossterm = { version = "0.29", optional = true }
 fuzzy-matcher = { version = "0.3", optional = true }
-gix = { version = "0.75", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
+gix = { version = "0.75", features = [
+  "blocking-network-client",
+  "blocking-http-transport-reqwest-rust-tls",
+] }
 home = "0.5"
-notify = { version = "8.2.0", optional = true }
+notify = { version = "6.1.1", optional = true } # TODO infinite recursion starting with 7.0.0
 pico-args = "0.5"
 ratatui = { version = "0.29", optional = true }
 serde_json = "1"
